2008-08-24  Aaron Bockover  <abock@gnome.org>

	Phase 1 of Hackweek: wrote JSON tokenizer and parser/deserializer and 
	lots of unit tests. It covers 100% of the 'spec' at json.org, implemented
	from reading the grammar images published there.

	* src/Libraries/Hyena/Hyena.Json/Tokenizer.cs: Lex JSON according to
	the spec on json.org, transform to stream of tokens

	* src/Libraries/Hyena/Hyena.Json/Deserializer.cs: Parser built on top
	of the tokenizer that constructs the JSON objects from the token stream
	
	* src/Libraries/Hyena/Hyena.Json/IJsonCollection.cs: Collection interface
	providing Dump methods

	* src/Libraries/Hyena/Hyena.Json/JsonArray.cs:
	* src/Libraries/Hyena/Hyena.Json/JsonObject.cs: The two collection 
	objects in JSON, derived from List and Dictionary respectively

	* src/Libraries/Hyena/Hyena.Json/Token.cs:
	* src/Libraries/Hyena/Hyena.Json/TokenType.cs: Token class and type flags

	* src/Libraries/Hyena/Hyena.Json/Tests/DeserializerTests.cs:
	* src/Libraries/Hyena/Hyena.Json/Tests/TokenizerTests.cs: Unit tests for
	the tokenizer and deserializer

2008-08-23  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Resources/ActiveSourceUI.xml: Put
	'Mark New' above 'Mark Old'.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/DefaultColumnController.cs:
	Add Album Artist, Comment, Track Count, Disc Count, Bpm, BitRate,
	Conductor, and Grouping column.

	* src/Core/Banshee.ThickClient/Banshee.Gui/InterfaceActionService.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/BansheeActionGroup.cs: Add
	helpers for adding/removing UIManager elements.

	* src/Core/Banshee.Services/Banshee.Query/BansheeQuery.cs: Add
	AlbumArtist, Disc Count, TrackCount, Bpm, BitRate, Conductor, and Gruping
	query fields and sorting.  Add TrackNumber, which previously was defined
	as a query field but not in the default FieldSet.

	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngineService.cs: