@@ -3,7 +3,7 @@ pkgconfig_in_files = $(wildcard banshee-1-*.pc.in)
 pkgconfig_DATA = $(pkgconfig_in_files:.pc.in=.pc)
 
 %.pc: %.pc.in
-	sed "s,\@VERSION\@,$(VERSION),g; s,\@prefix\@,$(prefix),g" < $< > $@
+	sed "s,\@VERSION\@,$(VERSION),g; s,\@prefix\@,$(prefix),g; s,\@libdir\@,$(libdir),g" < $< > $@
 
 EXTRA_DIST = $(pkgconfig_in_files)
 
